--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,15 @@
 server.port=8080
+
+# Multipart
 spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=100MB
+
+# Tomcat request timeout (ms)
+server.tomcat.connection-timeout=30000
+
+# Compression
+server.compression.enabled=true
+server.compression.mime-types=text/plain,application/json
+
+# Logging
+logging.level.com.tcleaner=INFO
