fix: код-ревью — баг mention, @Async, гонка файлов, логгеры

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,22 @@
 server.port=8080
 
-# Multipart
-spring.servlet.multipart.max-file-size=100MB
-spring.servlet.multipart.max-request-size=100MB
-
 # Tomcat request timeout (ms)
 server.tomcat.connection-timeout=30000
 
 # Compression
 server.compression.enabled=true
 server.compression.mime-types=text/plain,application/json
+
+# Storage configuration
+app.storage.import-path=/data/import
+app.storage.export-path=/data/export
+app.storage.export-ttl-minutes=10
+app.storage.cleanup-interval-ms=60000
+
+# Multipart file upload limits (prevent DoS)
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
 
 # Logging
 logging.level.com.tcleaner=INFO
