fix: StorageConfig — добавлен @Primary для решения конфликта бинов в CI

--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,12 +1,7 @@
-# Тестовая конфигурация — использует java.io.tmpdir вместо /data/import|export,
-# чтобы Spring контекст поднимался в любом окружении (CI, Windows, Linux).
+# Тестовые пути — изолированы от основных, чтобы тесты не конфликтовали
+# с запущенным приложением на той же машине.
 app.storage.import-path=${java.io.tmpdir}/tcleaner-test/import
 app.storage.export-path=${java.io.tmpdir}/tcleaner-test/export
-app.storage.export-ttl-minutes=10
-app.storage.cleanup-interval-ms=60000
 
-spring.servlet.multipart.enabled=true
-spring.servlet.multipart.max-file-size=10MB
-spring.servlet.multipart.max-request-size=10MB
-
+# Подавляем INFO-логи в тестах
 logging.level.com.tcleaner=WARN
